--- a/src/app/component/form/form.component.html
+++ b/src/app/component/form/form.component.html
@@ -1,3 +1,15 @@
-<p>
-  form works!
-</p>
+<form (ngSubmit)='submitUser()' #Form='ngForm'>
+
+  <!--Name Input -->
+      <div class="form-group">
+        <label appBolder for="name">Search Profile:</label>
+        <input id="name" class="form-control" type="text" required [(ngModel)]="username" name="name" #name="ngModel">
+        <button type="submit" class="btn-primary">  🔍  SEARCH </button>
+      </div>
+      <div class="alert-danger" [hidden]="name.valid || name.pristine">
+        <p>Name is required</p>
+      </div>
+
+
+</form>
+
