--- a/src/app/github-repo/github-repo.component.html
+++ b/src/app/github-repo/github-repo.component.html
@@ -1,7 +1,7 @@
-  <div class="display-repos">
+  <div class="display">
 
     <p appBolder style="text-decoration: underline">{{repo.appName}}</p>
     <p style="text-decoration:bold">{{repo.description}}</p>
-    <button appBolder type="button" name="button"> <a href="{{repo.repoLink}}">View Repo</a> </button>
+    <button  type="button" name="button"> <a href="{{repo.repoLink}}">View Repository</a> </button>
 
   </div>
