--- a/src/app/github-profile/github-profile.component.html
+++ b/src/app/github-profile/github-profile.component.html
@@ -2,15 +2,15 @@
   <h1>Github Search</h1>
   <div class="row">
     <app-github-form (addUser)='getResponse($event)'></app-github-form>
-  </div> <!--end row form -->
+  </div> 
 
 
   <div class="row">
     <div class="col-md-6">
-      <div appBolder class="profile-card">
+      <div >
         <div class="center">
           <img src="{{user.photoUrl}}" alt="Avatar">
-          <h3 appBolder >{{user.userProfile}}</h3>
+          <h3  >{{user.userProfile}}</h3>
         </div>
         <p>{{user.bio}}</p>
         <div class="follow">
@@ -32,9 +32,9 @@
       <div *ngFor='let repo of arrayRepo'>
         <app-github-repo *ngIf='user.showRepos' [repo]='repo'></app-github-repo>
       </div>
-    </div> <!-- end div repos -->
+    </div> 
 
 
-  </div> <!-- end div row github -->
+  </div> 
 
 </div>
