--- a/src/app/github-repo/github-repo.component.css
+++ b/src/app/github-repo/github-repo.component.css
@@ -1,7 +1,7 @@
-.display-repos {
+.display {
   margin: 10px;
   padding: 10px;
-  border: 2px solid teal;
-  border-radius: 4px;
+  border: 1px solid #84ffff;
+  border-radius: 5px;
   background-color: rgba(208, 246, 235, 0.68);
 }
