styling the page

--- a/src/app/github-profile/github-profile.component.html
+++ b/src/app/github-profile/github-profile.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Github Search</h1>
+  <h1 style="text-align: center; font-size: 3em; color: #81c784">Github Search</h1>
   <div class="row">
     <app-github-form (addUser)='getResponse($event)'></app-github-form>
   </div> 
