--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -2,9 +2,9 @@
 
   <!--Name Input -->
       <div class="form-group">
-        <label appBolder for="name">Search Profile:</label>
-        <input id="name" class="form-control" type="text" required [(ngModel)]="username" name="name" #name="ngModel">
-        <button type="submit" class="btn-primary">  🔍  SEARCH </button>
+        <label  for="name">Search for a  user:</label>
+        <input style="width: 480px" id="name" class="form-control" type="text" required [(ngModel)]="username" name="name" #name="ngModel">
+        <button type="submit" class="btn btn-outline-success" >  🔍  SEARCH </button>
       </div>
       <div class="alert-danger" [hidden]="name.valid || name.pristine">
         <p>Name is required</p>
